add shipment functions